# la-historia-por-concostrina

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  episodes.json  requirements.txt
audio_embedder/: COST_TRACKING.md  Makefile  README.md  pyproject.toml  setup.py
audio_embedder/app/: main.py
audio_embedder/app/shared/: cost_utils.py  logger.py  semantic_chunker.py
audio_embedder/data/transcriptions/: -1014991685462308516.json  -1018288206543257006.json  -1034427325190240433.json  -1046957938213981187.json  -1132776000713571885.json  -1166644757746363556.json  -1175210250803787585.json  -1188506772089903911.json  -1248047195474331025.json  -1254677195577562544.json  -1256982801834150915.json  -1387227360873590979.json  -1401344832689807518.json  -1413894330443989062.json  -1462244660658762850.json  -1474172459364741960.json  -1495491984159114157.json  -149599320347942434.json  -1508907672648428879.json  -1512150919946886271.json  -1530835321036824355.json  -1531973594852912732.json  -1564472586128597295.json  -1586176421591449482.json  -1636206487983589579.json  -1642968384400436408.json  -1704021426140600423.json  -1734545287643964544.json  -1734897147097809477.json  -1744692399458426098.json  -176589952531958794.json  -1787163418263288932.json  -1795216033843286549.json  -1811305837226139282.json  -1817947427429242541.json  (+656 more)
audio_embedder/examples/: openai_transcription_example.py
audio_embedder/tests/: test_file_transcription_repository.py  test_openai_audio_transcriptor.py  test_process_episodes.py  test_search_episodes.py
data/: episodes.json  (+2 more)
(+1016 files in other folders)
